# asymmetric-work-test

./: .gitignore  EXAMPLE_PROMPTS.md  PRESIDIO_FALSE_POSITIVE_ANALYSIS.md  README.md  main.py  presidio_fp_analysis.txt  pyproject.toml
production_pipeline/: README.md  output.csv  requirements.txt  run_production_pipeline.py
results/: comparison_metrics.csv  haiku_5shot_classification_classification_results.json  haiku_5shot_classification_with_presidio_classification_results.json  haiku_5shot_results_conservative.json  haiku_5shot_with_presidio_results.json  haiku_zeroshot_classification_classification_results.json  haiku_zeroshot_classification_with_presidio_classification_results.json  haiku_zeroshot_results.json  haiku_zeroshot_with_presidio_results.json  hybrid_fn_emails_full.txt  pii_classification_accuracies.csv  presidio_entities_cache.json  presidio_lax_results.json  presidio_moderate_results.json  presidio_strict_results.json  presidio_v2_lax_results.json  presidio_v2_moderate_results.json  presidio_v2_strict_results.json  sonnet_5shot_classification_classification_results.json  sonnet_5shot_classification_with_presidio_classification_results.json  sonnet_5shot_results.json  sonnet_5shot_with_presidio_results.json  sonnet_zeroshot_classification_classification_results.json  sonnet_zeroshot_classification_with_presidio_classification_results.json  sonnet_zeroshot_results.json  sonnet_zeroshot_results_conservative.json  sonnet_zeroshot_with_presidio_results.json
scripts/: analyze_missed_pii_types.py  analyze_presidio_false_positives.py  deduplicate_emails.py  (+13 more)
(+60 files in other folders)
