[project]
name = "pii-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.72.0",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "pip>=25.3",
    "presidio-analyzer>=2.2.360",
    "presidio-anonymizer>=2.2.360",
    "python-dotenv>=1.2.1",
    "reportlab>=4.4.4",
    "seaborn>=0.13.2",
    "tqdm>=4.66.0",
]
